--- a/.gitconfig
+++ b/.gitconfig
@@ -3,4 +3,4 @@
 
     [mergetool "unityyamlmerge"]
     trustExitCode = false
-    cmd = '<path to UnityYAMLMerge>' merge -p "$BASE" "$REMOTE" "$LOCAL" "$MERGED"
+    cmd = 'C:\\Program Files\\Unity\\Hub\\Editor\\2020.3.26f1\\Editor\\Data\\Tools' merge -p "$BASE" "$REMOTE" "$LOCAL" "$MERGED"
